Remove trailing/inlined JS from gallery.html (ensure only external app.js included)

--- a/gallery.html
+++ b/gallery.html
@@ -17,28 +17,28 @@
       </div>
     </div>
 
-      </body>
-    </html>
-            function next() {
-                if (index >= images.length) return Promise.resolve();
-                const i = index++;
-                const url = `my photos/${images[i]}`;
-                return fetch(url, { mode: 'no-cors' })
-                    .then(() => {
-                        loadedCount++;
-                        updateLoadingProgress();
-                    })
-                    .catch(() => {
-                        loadedCount++;
-                        updateLoadingProgress();
-                    })
-                    .then(() => next());
-            }
+    <div class="loading-bar" id="loadingBar"></div>
+    <div class="loading-counter" id="loadingCounter"></div>
 
-            for (let i = 0; i < concurrency; i++) queue.push(next());
-            return Promise.all(queue);
-        }
-    </script>
+    <div class="container">
+      <div class="header">
+        <h1>📸 My Photo Gallery</h1>
+        <p>A beautiful collection of memories</p>
+      </div>
 
-</body>
+      <div id="gallery" class="gallery"></div>
+    </div>
+
+    <!-- Modal for full-size image viewing -->
+    <div class="modal" id="modal">
+      <div class="modal-content">
+        <span class="modal-close" onclick="closeModal()">&times;</span>
+        <span class="modal-nav modal-prev" onclick="prevImage()">&#10094;</span>
+        <img class="modal-img" id="modalImg" src="" alt="Full size image">
+        <button class="download-btn" onclick="downloadImage()">⬇️ Download Photo</button>
+        <span class="modal-nav modal-next" onclick="nextImage()">&#10095;</span>
+        <div class="modal-info" id="modalInfo"></div>
+      </div>
+    </div>
+  </body>
 </html>
